--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <p class="logo">Ima's Blog</p>
-      <nav>
+      <nav class="navbar">
         <ul>
           <li>
             <a href="index.html" class="navigation">Home</a>
