Edited html and css

--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href=""styles.css>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ima's Book Blog</title>
   </head>
+
   <body>
-    <header>
-      <p class="logo">Ima's Blog</p>
-      <nav>
-        <ul>
-          <li>
+    <section id="header">
+      <p class="logo">KodeIma</p>
+        <nav>
             <a href="index.html" class="navigation">Home</a>
-          </li>
-          <li>
             <a href="about.html" class="navigation">About</a>
-          </li>
-          <li>
             <a href="blog.html" class="navigation">Blog</a>
-          </li>
-          <li>
             <a href="books.html" class="navigation">Books</a>
-          </li>
-          <li>
-            <a href="support.html" class="navigation support">Support</a>
-          </li>
-        </ul>
-      </nav>
-      <
-    </header>
+            <a href="support.html" class="navigation"><span>Support</span></a>
+        </nav>
+    </section>
     
     
   </body>
