made edits to css and added icons to html

--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ima's Book Blog</title>
+    <title>Ima's Blog</title>
   </head>
 
   <body>
-    <section id="header">
-      <p class="logo">KodeIma</p>
-        <nav>
-            <a href="index.html" class="navigation">Home</a>
-            <a href="about.html" class="navigation">About</a>
-            <a href="blog.html" class="navigation">Blog</a>
-            <a href="books.html" class="navigation">Books</a>
-            <a href="support.html" class="navigation"><span>Support</span></a>
+    <div class="container">
+      <header>
+        <a href="index.html">
+          <img src="images/icons/logo.png" alt="Ima's Blog Logo" id="logo">
+        </a>
+        <nav class="nav-links">
+            <a href="discover.html" class="navigation">
+              <img src="images/icons/discovericon.svg" alt="Discover Icon" class="icon"> Discover
+            </a>
+            <a href="about.html" class="navigation">
+              <img src="Images/icons/abouticon.svg" alt="About Icon" class="icon"> About
+            </a>
+            <a href="blog.html" class="navigation">
+              <img src="Images/icons/blogicon.svg" alt="Blog Icon" class="icon"> Blog
+            </a>
+            <a href="library.html" class="navigation">
+              <img src="Images/icons/libraryicon.svg" alt="Library Icon" class="icon"> Library
+            </a>
         </nav>
-    </section>
-    
+      </header>
+      <div class="divider"></div>
+    </div>
     
   </body>
 </html>
